--- a/.gitattributes
+++ b/.gitattributes
@@ -2,7 +2,7 @@
 # Set default behavior to automatically normalize line endings.
 ###############################################################################
 * text=auto
-LoginTutorial_V2/curl/* linguist-vendored
+LoginTutorial_V2/curl/* linguist-vendored=true
 
 ###############################################################################
 # Set default behavior for command prompt diff.
